# ROBOKOF_FLET_ANDROID

./: README.md  RELATORIO_MIGRACAO.md  bootstrap.py  build_apk.bat  build_apk.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml
Codigos/: README.md  app_flet.py  barracao_processor.py  cadastro_service.py  config.py  conversao_service.py  depara_clientes_service.py  fila_service.py  gerador_erro.py  gerador_robokof.py  gerador_txt_edi.py  gln_service.py  historico.py  identidade_pedidos.py  importador_clientes.py  layout_standard.py  leitor_excel_clientes.py  leitor_fila.py  leitor_pdf_clientes.py  mobile_health.py  mobile_queue.py  operacao_service.py  padronizador_pedidos.py  pdf_alert_utils.py  rastreabilidade_layouts.py  terminal_logger.py  tratador_datas.py  utils.py  validacoes.py
Codigos/core/: __init__.py  layout_contract.py  project_structure.py  validation_stage.py
Codigos/integracoes/: __init__.py  registrar_iquegami_robo_kof.py
Codigos/layouts/: __init__.py  iquegami.py  rede_grancoffee.py  registrar_grancoffee.py
Codigos/parsers_excel/: __init__.py  (+5 more)
_documentacao/: 00_MAPA_DO_PROJETO.md  01_PADRAO_NOVO_LAYOUT_ROBO_KOF.md  02_GOVERNANCA_E_LIMPEZA_SEGURA.md  03_CHECKLIST_TESTE_LAYOUT.md  04_RELATORIO_REORGANIZACAO_20260527.md  05_RELATORIO_LIMPEZA_ORGANIZACAO_GRANCOFFEE_20260529.md  06_CORRECAO_GRANCOFFEE_EMAIL_METADATA_20260530.md  07_AJUSTE_GRANCOFFEE_DATA_REMESSA_PONTO_20260530.md  INDICE_CADASTROS.csv  MANIFESTO_ARQUIVOS_PROJETO.json  MANIFESTO_LIMPEZA_20260529.json  RELATORIO_MELHORIAS_SEGUNDA_RODADA_20260529.md
(+52 files in other folders)
